# hyuabot-backend-fastapi

./: Dockerfile  README.md  mypy.ini  setup.cfg
.github/workflows/: default.yml  flake8-matcher.json  mypy-matcher.json
requirements/: lint.txt  main.txt  test.txt  typecheck.txt
src/app/: __init__.py  main.py
src/app/controller/: bus.py  cafeteria.py  campus.py  commute_shuttle.py  library.py  shuttle.py  subway.py
src/app/controller/query/: __init__.py  bus.py  cafeteria.py  commute_shuttle.py  library.py  shuttle.py  subway.py
src/app/dependancies/: database.py
src/app/internal/: app.py  config.py  context.py  date_utils.py
src/app/model/: __init__.py  bus.py  cafeteria.py  calendar.py  campus.py  commute_shuttle.py  library.py  shuttle.py  subway.py
src/app/response/: bus.py  cafeteria.py  campus.py  commute_shuttle.py  library.py  shuttle.py  subway.py
tests/: conftest.py  test_app_context.py  test_bus_endpoint.py  test_bus_query.py  test_cafeteria_endpoint.py  test_cafeteria_query.py  test_campus_endpoint.py  test_commute_shuttle.py  test_commute_shuttle_query.py  test_date_utility.py  test_library_endpoint.py  test_library_query.py  test_shuttle_endpoint.py  test_shuttle_query.py  test_subway_endpoint.py  test_subway_query.py
