[metadata]
name = HYUABOT-Backend-FastAPI
version = 1.0.0
description = HYUABOT Backend FastAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jil8885
author = Jeongin Lee
author_email = jil8885@hanyang.ac.kr
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
project_urls =
    Source = https://github.com/jil8885/hyuabot-backend-fastapi
    Tracker = https://github.com/jil8885/hyuabot-backend-fastapi/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.11
setup_requires =
    setuptools>=51.1.1
    wheel>=0.36.2
install_requires =
    fastapi==0.95.0
    pydantic==1.10.7
    hypercorn==0.14.3
    aiohttp==3.8.4
    setuptools==67.6.1
    starlette==0.26.1
    httpx==0.23.3
    grequests==0.6.0
    gevent==22.10.2
    psycopg2-binary==2.9.6
    SQLAlchemy==2.0.9
    SQLAlchemy-Utils==0.40.0
    asyncpg==0.27.0
    holidays==0.23
    strawberry-graphql[fastapi]==0.175.1
zip_safe = false
include_package_data = true

[options.extras_require]
test =
    pytest==7.3.0
    pytest-asyncio==0.21.0
    pytest-aiohttp==1.0.4
    pytest-cov==4.0.0
    pytest-mock==3.10.0
    httpx==0.23.3
    codecov
dev =
lint =
    flake8==6.0.0
    flake8-commas==2.1.0
typecheck =
    mypy==1.2.0
    types-click
    types-Jinja2
    types-pkg_resources
    types-PyYAML
    types-python-dateutil
    types-tabulate
    types-requests
    types-redis
    types-passlib
    sqlalchemy[mypy]

[options.packages.find]
where = src
include = app

[tool:pytest]
testpaths = tests

[yapf]
based_on_style = facebook
spaces_before_comment = 2
column_limit = 120
blank_line_before_nested_class_or_def = true